--- a/mydiabprod/templates/mydiabprod/login.html
+++ b/mydiabprod/templates/mydiabprod/login.html
@@ -1,18 +1,185 @@
 <html>
 <title>myDiab.com</title>
-<body bgcolor="#FFFFFF" style="font-family:tahoma;font-size:10px;color:#515971;">
-<div>
-</br>
+<head>
+<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Pers!</title>
+
+	<!--<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">-->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+<!--<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script> -->
+ 
+  
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<!--<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.js"></script>   -->
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+crossorigin="anonymous"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
+integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  
+integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.css" rel="stylesheet">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.js"></script>
+{% load static %}
+<link rel="stylesheet" href="{% static 'mydiabprod/results.css' %}">
+
+<script src="{% static 'mydiabprod/loadjson.js' %} "type="text/javascript"></script>
+<script src="{% static 'mydiabprod/getjson.js' %} "type="text/javascript"></script>
+<style>
+.firstcontainer {
+    padding-top: 1%;
+	padding-left:5%;
+    width: 100%;
+	height:100%;
+	background-color: #e1ede8;
+	}
+.standard_viewport {
+	        display: block;
+			background-color: white;
+			width:95%;
+			height:50%;
+			padding-left:1%;
+	    }
+.mportait_viewport {
+    display: none;
+}
+.mlandscape_viewport {
+display: none;
+}
+.button-wjs-login {
+    background-color: white; /* Green */
+    border: 1px solid #263a5b;
+    color: #263a5b;
+    padding: 3px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+    width: 90px;
+    }
+.button-wjs-login:hover {
+      background-color: #f7e8eb;
+	  border: 1px solid #f7e8eb;
+	  }
+@media (orientation: portrait) {
+
+	    .standard_viewport {
+	        display: none;
+	    }
+	    .mlandscape_viewport {
+	        display: none;
+	    }
+		.firstcontainer {
+    padding-top: 2%;
+	padding-left:5%;
+	padding-right:5%;
+    width: 100%;
+	height:100%;
+	background-color: #e1ede8;
+	}
+		.mportait_viewport {
+		padding-top:15%;
+		padding-left:20%;
+		display: block;
+		width: 99%;
+		height: 85%;
+		background-color: white;
+		
+		}
+}
+@media (orientation: landscape) and (max-width: 1000px) {
+    .standard_viewport {
+	        display: none;
+	    }
+	    .mportait_viewport {
+	        display: none;
+	    }
+		.firstcontainer {
+    padding-top: 5px;
+	padding-left:1%;
+	padding-right:1%;
+    width: 100%;
+	height:100%;
+	background-color: #b8dbcd;
+	}
+		.mlandscape_viewport {
+		display: block;
+		width:99.5%;
+		height: 82%;
+
+		background-color:white;
+		padding-left:5px;
+		
+		}
+}
+
+</style>
+</head>
+<body>
+    <div class="firstcontainer" id="firstcontainer">
+        <p>Welcome to MyDiab</p>
+    <div class="standard_viewport">
+        <br>
+        <form action="{% url 'mydiabprod:results' %}"  method="post">
+{% csrf_token %}
+        <div style="line-height:10px">
+            <p>Username</p>
+            <p> <input type="text" name="username"/> </p>
+            <p>Password </p>
+            <p> <input type="password" name="password"/> </p>
+        </div>
+        <div> 
+            <button class="button-wjs-login" value="login">login</button> 
+        </div>
+        <div>
+            <p class="plogin"> {{text1}}</p>
+        </div>
+        </form>
+    </div>
+
+<div class="mportait_viewport">
+<br>
 <form action="{% url 'mydiabprod:results' %}"  method="post">
 {% csrf_token %}
-<div align="right">
-<p>Username: <input type="text" name="username" size="15"/></p>
-<p>Password: <input type="password" name="password" size="15"/> </p>
+<div style="line-height:10px">
+<p>Username</p>
+<p> <input type="text" name="username"/></p>
+<p>Password </p>
+<p> <input type="password" name="password"/> </p>
 </div>
-<div align="right"> <input type="submit" value="login" style="font-family:tahoma;font-size:10px;color:#515971;"/> </div>
+<br>
+<div> 
+<button class="button-wjs-login" value="login">login</button> 
+</div>
+<br>
+<div>
+<p class="plogin"> {{text1}}</p>
+</div>
 </form>
-<p style="font-family:tahoma;font-size:10px;color:#cc3300;" align="right"> {{text1}}</p>
 </div>
-
+<div class="mlandscape_viewport">
+        <br>
+        <form action="{% url 'mydiabprod:results' %}"  method="post">
+{% csrf_token %}
+        <div style="line-height:10px">
+            <p>Username</p>
+            <p> <input type="text" name="username"/> </p>
+            <p>Password </p>
+            <p> <input type="password" name="password"/> </p>
+        </div>
+        <div> 
+            <button class="button-wjs-login" value="login">login</button> 
+        </div>
+        <div>
+            <p class="plogin"> {{text1}}</p>
+        </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
