--- a/mydiabprod/templates/mydiabprod/loginx.html
+++ b/mydiabprod/templates/mydiabprod/loginx.html
@@ -1,7 +1,57 @@
 <html>
+<head>
+<style>
+body {
+    width:100%;
+	background-color: #eff3f9;
+	}
+.mportait_viewport {
+display: none;
+}
+.mlandscape_viewport {
+display: none;
+}
+
+.button-wjs-login {
+    background-color: white; /* Green */
+    border: 1px solid #263a5b;
+    color: #263a5b;
+    padding: 3px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+    width: 90px;
+    }
+.button-wjs-login:hover {
+      background-color: #f7e8eb;
+	  border: 1px solid #f7e8eb;
+	  }
+@media (orientation: portrait) {
+    @media (max-width: 500px) {
+	    .standard_viewport {
+	        display: none;
+	    }
+	    .mlandscape_viewport {
+	        display: none;
+	    }
+}
+
+@media (orientation: landscape) and (max-width: 1000px) {
+    .standard_viewport {
+	        display: none;
+	    }
+	    .mportait_viewport {
+	        display: none;
+	    }
+}
+
+</style>
+</head>
 <title>myDiab.com</title>
-<body bgcolor="#FFFFFF" style="font-family:tahoma;font-size:10px;color:#515971;">
-<div>
+<body style="font-family:tahoma;font-size:10px;color:#515971;">
+<div class="standard_viewport">
 </br>
 <form action="{% url 'mydiabprod:pers' %}"  method="post">
 {% csrf_token %}
@@ -12,6 +62,43 @@
 <div align="right"> <input type="submit" value="login" style="font-family:tahoma;font-size:10px;color:#515971;"/> </div>
 </form>
 <p style="font-family:tahoma;font-size:10px;color:#cc3300;" align="right"> {{text1}}</p>
+</div>
+
+<div class="mportait_viewport" style="width:98%;bgcolor:"#FFFFFF">
+<br>
+<form action="{% url 'mydiabprod:pers' %}"  method="post">
+{% csrf_token %}
+<div>
+<p>Username: <input type="text" name="username" size="15"/></p>
+<p>Password: <input type="password" name="password" size="15"/> </p>
+</div>
+<div> 
+<input type="submit" value="login" style="font-family:tahoma;font-size:10px;color:#515971;"/> 
+</div>
+</form>
+<p style="font-family:tahoma;font-size:10px;color:#cc3300;" align="right"> {{text1}}</p>
+</div>
+
+
+
+
+
+
+
+<div class="mlandscape_viewport">
+</br>
+<form action="{% url 'mydiabprod:pers' %}"  method="post">
+{% csrf_token %}
+<div align="right">
+<p>Username: <input type="text" name="username" size="15"/></p>
+<p>Password: <input type="password" name="password" size="15"/> </p>
+</div>
+<div> 
+<input type="button" class="button-wjs-login" value="login"/> 
+
+<p> {{text1}}</p>
+</div>
+</form>
 </div>
 
 </body>
