--- a/mydiabprod/static/mydiabprod/blogstyles.css
+++ b/mydiabprod/static/mydiabprod/blogstyles.css
@@ -175,7 +175,7 @@ border-bottom:0.1px solid #d5dee8;
 .prem {
     display: block; /* Hidden by default */
     position: absolute; /* Stay in place */
-	top: 47%;
+	top: 50%;
 	padding-left: 1%;
     z-index: 1; /* Sit on top */
     /*border-style: solid;*/
@@ -188,22 +188,25 @@ border-bottom:0.1px solid #d5dee8;
 }
 .modalzz_content {
     background-color: #666363;
-    margin: auto;
-	/*padding-top: 2px;*/
-    padding:8px;
-	line-height: 12px;
+	padding-top: 6px;
+	padding-bottom:12px;
+	padding-left:6px;
+	
+    /*padding:8px;*/
+	/*line-height: 18px;*/
     /*border: 0.5px solid #cdd2d8;*/
-    width: 120%;
+    width: 140%;
     max-height: 100%;
     /*border-radius: 4px;*/
     opacity: 0.6;
     font: tahoma, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     color: #f7fcfa;
 }
 .topmodals {
-    width:48px;
-	height:48px;
+	 width:35px;
+	height:30px;
+	padding-left:4px;
 	}
 #maincover {
     /*height: 300px;*/
@@ -278,8 +281,8 @@ border-bottom:0.1px solid #d5dee8;
         .prem {
             display: block; /* Hidden by default */
             position: absolute; /* Stay in place */
-            top: 90%;
-            left: 9%;
+            top: 480px;
+            left: 30px;
             z-index: 200000; /* Sit on top */
             /*border-style: solid;*/
             padding-top:50px; Location of the box */
@@ -290,10 +293,9 @@ border-bottom:0.1px solid #d5dee8;
             background-color: rgba(0,0,0,0.0); /* Black w/ opacity */
         }
         .modalzz_content {
-		      font-size:14px;
-		   line-height:10px;
-		   padding-bottom: 0.5%;
-		   padding-left:15%;
+		   font-size:14px;
+		   padding-bottom: 10px;
+		   padding-left:10px;
            width: 130px;
         }
         .topmodals {
@@ -376,8 +378,8 @@ border-bottom:0.1px solid #d5dee8;
         .prem {
             display: block; /* Hidden by default */
             position: absolute; /* Stay in place */
-            top: 48%;
-            left: 12%;
+            top: 150px;
+            left: 60px;
             z-index: 200000; /* Sit on top */
             /*border-style: solid;*/
             padding-top:50px; Location of the box */
@@ -389,13 +391,11 @@ border-bottom:0.1px solid #d5dee8;
         }
         .modalzz_content {
 		   font-size:14px;
-		   line-height:10px;
-		   padding-left:10%;
+		   padding-left:10px;
            width: 130px;
-		   height: 70px;
         }
         .topmodals {
-    width:28px;
+    width:30px;
 	height:28px;
 	}
         .note-video-clip {
