--- a/mydiabprod/templates/mydiabprod/form.html
+++ b/mydiabprod/templates/mydiabprod/form.html
@@ -21,16 +21,15 @@
   <!--  <div class="col-4" style="padding-left:0.1%">
         <p class="searchtextoptimizer" id="stextoptimizer1">Please enter search argument</p>
     </div> -->
-    <div class="col-8">
         <div class="row">
-                    <div class="col-10" style="float:left">
-                <input type="text" class="searchtextforselect" style="height:35px;width:350px;" name="soptionselect" id="searchinput1"/>
+                    <div class="col-7">
+                <input type="text" class="searchtextforselect" name="soptionselect" id="searchinput1"/>
                         </div>
-                <div class="col-2" style="float:left">
+                <div class="col-2">
                    <button class="button-wjs-search" value=1>search</button>
                 </div>
+				<div class="col-3"></div>
             </div>
-        </div>
 <!--</div>-->
 </div>
 <br>
