--- a/mydiabprod/templates/mydiabprod/loginx.html
+++ b/mydiabprod/templates/mydiabprod/loginx.html
@@ -87,7 +87,7 @@ display: none;
 
 <div class="mlandscape_viewport">
 </br>
-<form action="{% url 'mydiabprod:pers' %}"  method="post">
+<form action="{% url 'mydiabprod:results' %}"  method="post">
 {% csrf_token %}
 <div align="right">
 <p>Username: <input type="text" name="username" size="15"/></p>
