--- a/mydiabprod/static/mydiabprod/results.css
+++ b/mydiabprod/static/mydiabprod/results.css
@@ -41,7 +41,7 @@
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-    /*cursor: pointer;*/
+    cursor: pointer;
     border-radius: 4px;
     }
 .button-wjs-search:hover {
@@ -52,7 +52,7 @@
 	background-color: white;
 }
 .shadow-sm:hover {
-	background-color: #afc2ce;
+background-color: #c5ddcb;
 }
 #searchinput1 {
 	height:35px;
