--- a/mydiabprod/templates/mydiabprod/blog_counter.html
+++ b/mydiabprod/templates/mydiabprod/blog_counter.html
@@ -33,11 +33,6 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 <script src="{% static 'mydiabprod/blogfuncfooter.js' %} "type="text/javascript"></script>
 <script src="{% static 'mydiabprod/loadjson.js' %} "type="text/javascript"></script>
 <script src="{% static 'mydiabprod/getjson.js' %} "type="text/javascript"></script>
-<style>
-.shadow-sm:hover {
-background-color: red;
-}
-</style>
 </head>
 <body>
 <div id="topcontainer">
@@ -58,7 +53,7 @@ background-color: red;
 		</div>
         <div class="col" style="float:right">
             <div class='modalsettings' style='float:right'>
-                <img id='settings_navbarx' class='navbarphoto' src='{% static "mydiabprod/settings-20-xx.png" %}' style='height:28px;width:28px;'/></br>
+                <img id='settings_navbarx' class='navbarphoto' src='{% static "mydiabprod/settings-20-xx.png" %}' style='height:28px;width:28px;'/><br>
                 <div id='showfortogglex' class='modalsettingscontent'>
 				<div id="prosearch" class="col-12">
 				<p><a class="btn-wjs" onclick="searchaction()">search</a><p>
@@ -104,13 +99,13 @@ background-color: red;
 
 	  {% for result in html_loop %}
 
-	</br>
+	<br>
 	  <div id='div@{{result.id}}' style="border-bottom:0.3px solid #c3cfdd;">
 	<div class="row">
 	<div class="col-6">
 	<div style="float:left">
 	<b style="font-family:Calibri;font-size:18px;">{{result.BlogName}}</b>
-	<p style="font-family:Calibri;font-size:15px;">posted by {{result.BlogOwner}}</p>
+	<p style="font-family:Calibri;font-size:15px;font-style:oblique">posted by {{result.BlogOwner}}</p>
 	</div></div>
 	<div class="col-6">
 	{% if user_role == 'admin' %}
@@ -234,11 +229,11 @@ background-color: red;
 	</div>
 		</div>
 		    <div class="html_from_django">
-	            <p style="padding-left:1px;font-size:12px;"> {{forloop.counter}}:{{result.BlogEntry}}</p>
+	            <p style="padding-left:1px;font-size:12px;font-style:oblique"> {{forloop.counter}}:{{result.BlogEntry}}</p>
 	            <br>
 	            <p class="fontisx" id="django_html_upload{{result.id}}" style="padding-left:10px;"> {{result.BlogHtml|safe}} </p>
                 <br>
-	            </br>
+	            <br>
 				</div>
 				<div class="row" style="padding-top:12px; padding-bottom:12px;padding-left:10px">
 	<textarea class="textareacomment" placeholder="add comment..."> </textarea>
@@ -246,16 +241,16 @@ background-color: red;
     <div>
 	<a class="button-wjs-grey" href="#" >add</a>
 	</div>
-    </br>
-	</br></br>
+    <br>
+	<br><br>
 	
 	<!--<div class="row" style="float:right">
-	</br>
-	</br>
+	<br>
+	<br>
 	<button type="submit" class="btn btn-info btn-sm" value="postblog">Delete comment</button>
 	<br>
-	</br>
-	</br>
+	<br>
+	<br>
 	</div>-->
 	</div>
 	<script>
@@ -273,7 +268,7 @@ background-color: red;
 	}
 	</script>
 	{% endfor %}
-	<br></br>
+	<br><br>
 		<div class="row">
 
 	{% if html_loop.has_previous %}
@@ -318,8 +313,8 @@ background-color: red;
 	</div>
 		{% endif %}
 	 </div>
-	 </br>
-	 </br>
+	 <br>
+	 <br>
 	 	
 	{% else %}
             <p>No polls are available.</p>
