--- a/mydiabprod/templates/mydiabprod/index.html
+++ b/mydiabprod/templates/mydiabprod/index.html
@@ -56,7 +56,7 @@ $('#tableclass').DataTable({order: [[0, "desc"]]});
 </head>
 <body style="font-family:verdana;font-size:12px;color:#515971;width:100%">
 <!--<div id="container1", style="width:100%; height:14%; background-color:#f2f4f7;">-->
-    <nav class="navbar navbar-light" style="width:100%; height:60px; background-color: #27497c;">
+    <nav class="navbar navbar-light" style="width:100%; height:70px; background-color: #27497c;">
         <!--<div style="float:right; heigth:10%">-->
     <div class="container">
     <div class="col-sm" style="float:left">
@@ -80,7 +80,7 @@ $('#tableclass').DataTable({order: [[0, "desc"]]});
     </nav>
 <!--</div>-->
 
-<div class="container">
+<div class="container" style="padding-bottom:25px">
   <div class="row">
     <div class="col-sm">
     <div id="container177" style="float:left;" class="container177">
