--- a/mydiabprod/static/mydiabprod/results.css
+++ b/mydiabprod/static/mydiabprod/results.css
@@ -48,6 +48,25 @@
       background-color: #e8eef7;
 	  border: 0.1px solid #ced3db;
 	  }
+.button-wjs-blue {
+    background-color: white; /* Green */
+    border: 1px solid #afc2ce;
+    color: #263a5b;
+    /*float:left;*/
+    padding-top: 8px;
+	padding-bottom: 8px;
+	padding-left:16px;
+	padding-right: 16px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+    }
+.button-wjs-blue:hover {
+      background-color: #e8eef7;
+	  border: 0.1px solid #ced3db;
+	  }
 .shadow-sm {
 	background-color: white;
 }
