--- a/mydiabprod/templates/mydiabprod/blog_counter.html
+++ b/mydiabprod/templates/mydiabprod/blog_counter.html
@@ -100,7 +100,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 	  {% for result in html_loop %}
 
 	<br>
-	  <div id='div@{{result.id}}' style="border-bottom:0.3px solid #c3cfdd;">
+	  <div id='div@{{result.id}}' style="border-bottom:0.3px solid #e3edf2">
 	<div class="row">
 	<div class="col-6">
 	<div style="float:left">
@@ -229,20 +229,20 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 	</div>
 		</div>
 		    <div class="html_from_django">
-	            <p style="padding-left:1px;font-size:12px;font-style:oblique"> {{forloop.counter}}:{{result.BlogEntry}}</p>
+	            <!--<p style="padding-left:1px;font-size:12px;font-style:oblique"> {{forloop.counter}}:{{result.BlogEntry}}</p>-->
+				<p style="padding-left:1px;font-size:12px;font-style:oblique"> {{result.BlogEntry}}</p>
 	            <br>
 	            <p class="fontisx" id="django_html_upload{{result.id}}" style="padding-left:10px;"> {{result.BlogHtml|safe}} </p>
                 <br>
-	            <br>
 				</div>
-				<div class="row" style="padding-top:12px; padding-bottom:12px;padding-left:10px">
+			<!--	<div class="container" style="padding-left:10px; padding-right:10px">
+				<div class="row" style="padding-top:12px; padding-bottom:12px;padding-left:10px; padding-right:10px;border-top:0.3px solid #e3edf2">
 	<textarea class="textareacomment" placeholder="add comment..."> </textarea>
 	</div>
     <div>
 	<a class="button-wjs-grey" href="#" >add</a>
-	</div>
+	</div></div>-->
     <br>
-	<br><br>
 	
 	<!--<div class="row" style="float:right">
 	<br>
