--- a/mydiabprod/static/mydiabprod/results.css
+++ b/mydiabprod/static/mydiabprod/results.css
@@ -9,6 +9,9 @@
     font-size:16px; 
     line-height:10px;
 }
+.afirx{
+	display:block;
+}
 .portraisearch { 
     display: none;
     background-color:#eff3f9; 
@@ -19,6 +22,9 @@
     padding-bottom:15px; 
     font-size:14px;
 }
+.aportraisearch {
+	display: none;
+    }
 .landscapesearch { 
     display: none;
     width:95%; 
@@ -28,7 +34,9 @@
     background-color:#eff3f9; 
     font-size:13px;
 }
-
+.alandscapesearch {
+	display: none;
+    }
 .button-wjs-search {
     background-color: white; /* Green */
     border: 1px solid #afc2ce;
@@ -67,6 +75,72 @@
       background-color: #e8eef7;
 	  border: 0.1px solid #ced3db;
 	  }
+.button-wjs-account {
+    background-color: #284660; /* Green */
+	color: white;
+    border: 1px solid #afc2ce;
+    /*color: #263a5b;*/
+    /*float:left;*/
+    padding-top: 10px;
+	padding-bottom: 13px;
+	padding-left:15px;
+	padding-right: 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    }
+.button-wjs-account:hover {
+      background-color: #e8eef7;
+	  border: 0.1px solid #ced3db;
+	  }
+
+.button-wjs-landscape {
+    background-color: #284660; /* Green */
+	color: white;
+    border: 1px solid #afc2ce;
+    /*color: #263a5b;*/
+    /*float:left;*/
+    padding-top: 10px;
+	padding-bottom: 13px;
+	padding-left:15px;
+	padding-right: 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    }
+.button-wjs-landscape:hover {
+      background-color: #e8eef7;
+	  border: 0.1px solid #ced3db;
+	  }
+.button-wjs-account:hover {
+      background-color: #e8eef7;
+	  border: 0.1px solid #ced3db;
+	  }
+
+.button-wjs-portrait {
+    background-color: #284660; /* Green */
+	color: white;
+    border: 1px solid #afc2ce;
+    /*color: #263a5b;*/
+    /*float:left;*/
+    padding-top: 10px;
+	padding-bottom: 13px;
+	padding-left:15px;
+	padding-right: 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    }
+.button-wjs-portrait:hover {
+      background-color: #e8eef7;
+	  border: 0.1px solid #ced3db;
+	  }
 .shadow-sm {
 	background-color: white;
 }
@@ -81,9 +155,15 @@ background-color: #c5ddcb;
 .firx {
     display: none;
 	}
+.afirx{
+	display: none;
+}
 .portraisearch {
     display: block;
 	}
+.aportraisearch {
+	display: block;
+}
 #sselector2 {
 	width:60%;
 }
@@ -102,12 +182,21 @@ background-color: #c5ddcb;
 .firx {
     display: none;
 	}
+.afirx{
+	display: none;
+}
 .portraisearch {
     display: none;
 	}
+.aportraisearch {
+    display: none;
+    }
 .landscapesearch {
     display: block;
 	}
+.alandscapesearch {
+	display: block;
+    }
 	#sselector3 {
 	width:95%;
 	font-size:14px;
