--- a/mydiabprod/templates/mydiabprod/blog_counter.html
+++ b/mydiabprod/templates/mydiabprod/blog_counter.html
@@ -58,7 +58,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 				<div id="prosearch" class="col-12">
 				<p><a class="btn-wjs" onclick="searchaction()">search</a><p>
 				<p><a>search by date</a><p>
-				<p><a>three</a><p>
+				<p><a class="btn-wjs" onclick="registeraction()">account</a><p>
 				<p><a>four</a><p>
 				</div>
                 </div>
