--- a/mydiabprod/templates/mydiabprod/blog_counter.html
+++ b/mydiabprod/templates/mydiabprod/blog_counter.html
@@ -33,6 +33,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 <script src="{% static 'mydiabprod/blogfuncfooter.js' %} "type="text/javascript"></script>
 <script src="{% static 'mydiabprod/loadjson.js' %} "type="text/javascript"></script>
 <script src="{% static 'mydiabprod/getjson.js' %} "type="text/javascript"></script>
+<!--<script src="{% static 'mydiabprod/register.js' %} "type="text/javascript"></script>-->
 </head>
 <body>
 <div id="topcontainer">
